Added smarter tile generation (based on distribution of english letters); Added tile touch path constraints